# energyemissions

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/components/: filters.py  kpi_card.py
dashboard/pages/: 01_overview.py  02_sector_deep_dive.py  03_top_emitters.py  04_compliance.py  05_forecast.py
dashboard/utils/: db.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: safe_divide.sql
dbt_project/models/marts/: _marts__exposures.yml  _marts__models.yml  mart_compliance_gap.sql  mart_country_emissions.sql  mart_sector_trends.sql  mart_top_emitters.sql
dbt_project/models/staging/: _staging__models.yml  _staging__sources.yml  stg_allowances.sql  stg_emissions.sql  stg_installations.sql
dbt_project/snapshots/: snap_installations.sql
dbt_project/tests/: assert_emissions_positive.sql  assert_no_orphan_installations.sql  assert_year_range_valid.sql
docs/: architecture.md  data_dictionary.md  runbook.md
ingest/: __init__.py  loaders.py  schemas.py  sources.py
orchestration/: __init__.py  alerts.py  flows.py  schedules.py  tasks.py
tests/: conftest.py  test_clean.py  test_dashboard.py  test_flow_integration.py  test_forecast.py  test_ingest.py  test_loaders.py
transform/: __init__.py  clean.py  enrich.py  forecast.py
warehouse/migrations/: 002_raw_tables.sql  003_indexes.sql  004_forecast_tables.sql
warehouse/seed/: country_codes.csv  generate_sample.py
