[project]
name = "energy-pipeline"
version = "0.1.0"
description = "EU ETS emissions ETL pipeline"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "pandera>=0.20",
    "pyarrow>=16",
    "requests>=2.32",
    "structlog>=24.1",
    "prefect>=3.0",
    "dbt-core>=1.8",
    "dbt-postgres>=1.8",
    "streamlit>=1.32",
    "plotly>=5.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "testcontainers[postgres]>=4.7",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "pandas-stubs",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "RUF001", "UP012"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=ingest --cov=transform --cov=orchestration --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ingest", "transform", "orchestration", "dashboard"]
